# hive

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.web  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
apps/web/: next.config.js  nixpacks.toml  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/agents/: page.tsx
apps/web/src/app/graveyard/: page.tsx
apps/web/src/app/lab/: page.tsx
apps/web/src/app/strategies/: page.tsx
apps/web/src/app/strategy/[id]/: page.tsx
apps/web/src/components/: AgentsDashboard.tsx  BattleArena.tsx  BreedingLab.tsx  EvolutionTimeline.tsx  Graveyard.tsx  LiveFeed.tsx  Stats.tsx  StrategyCard.tsx  index.ts
apps/web/src/hooks/: useWebSocket.ts
apps/web/src/lib/: api.ts  sprites.ts  types.ts
contracts/: Anchor.toml  README.md  package.json  tsconfig.json
contracts/programs/meta_nft/: Cargo.toml
contracts/programs/meta_nft/src/: lib.rs
contracts/programs/meta_treasury/: Cargo.toml
contracts/programs/meta_treasury/src/: lib.rs
contracts/tests/: meta_nft.ts  meta_treasury.ts
scripts/: init-db.sql  seed-strategies.ts
tests/: package.json  tsconfig.json  vitest.config.ts
tests/e2e/: flow.test.ts
