[package]
name = "meta-nft"
version = "0.1.0"
description = "$META Strategy NFT Program - Mint NFTs of winning strategies"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meta_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
mpl-token-metadata = { version = "4.1.2", features = ["no-entrypoint"] }
