[package]
name = "meta-treasury"
version = "0.1.0"
description = "$META Treasury Program - Manages funds and profit distribution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meta_treasury"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
